[gd_scene load_steps=3 format=3 uid="uid://b4sjg4nqmx5x"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]
[ext_resource type="Theme" path="res://resources/default_theme.tres" id="2"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
text = "TITLE_GAME"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
minimum_size = Vector2(0, 50)
text = "MENU_NEW_GAME"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
minimum_size = Vector2(0, 50)
text = "MENU_CONTINUE"
disabled = true

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
minimum_size = Vector2(0, 50)
text = "MENU_TUTORIAL"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
minimum_size = Vector2(0, 50)
text = "MENU_SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
minimum_size = Vector2(0, 50)
text = "MENU_QUIT"

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = 200.0
text = "v0.1.0"
theme_override_font_sizes/font_size = 14

[node name="LanguageSelector" type="OptionButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
selected = 0

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="LanguageSelector" to="." method="_on_language_selected"]